Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Fixed
-
Affects Version/s: 5.12.3
-
Fix Version/s: 5.12.4
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:
-
Platform/s:
Description
The change https://codereview.qt-project.org/#/c/249101/ introduces a bug when accessing singleton properties, if there a multiple singletons which have properties with the same name.
The problem is, that if you create multiple instances of a component and pass in different singletons, the component accesses the cached properties of another singleton.
In the example that I have, you can see that if you have two instances of a component and two different singletons, it fails to properly display the values.